# sdi-integration

./: .gitignore  README.md
code/: CMakeLists.txt  Doxyfile  README.md
code/res/: res.qrc  stylesheet.qss
code/src/app/: CMakeLists.txt  main.cpp
code/src/app/controller/: Controller.cpp  Controller.h  Worker.cpp  Worker.h
code/src/app/model/: Data.cpp  Data.h  Definitions.h
code/src/app/view/: ColorDefinitions.h  Mainwindow.cpp  Mainwindow.h
code/src/app/view/chart/: ChartView.cpp  ChartView.h
code/src/app/view/control/: Controlbar.cpp  Controlbar.h
code/src/app/view/sidebar/: CollapsibleElement.cpp  CollapsibleElement.h  PopupMessage.cpp  PopupMessage.h  SideBar.cpp  SideBar.h
code/src/app/view/status/: StatusBar.cpp  StatusBar.h
